# brand-fe

./: .gitignore  .prettierrc  Makefile  package-lock.json  package.json  pyproject.toml  tailwind.config.js
brands/: __init__.py  app.py  auth.py  brands.py
brands/api/: brands.py  user.py
brands/templates/: base.html
brands/templates/auth/: register.html
brands/templates/brands/: index.html
src/: App.svelte  app.html  old_App.svelte
src/lib/: Footer.svelte  Header.svelte
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/brand/[brand_id]/: +page.server.ts  +page.svelte
src/routes/brand/[slug]/: +page.svelte
src/routes/categories/: +page.server.ts  +page.svelte
src/routes/categories/[category_id]/: +page.server.ts  +page.svelte
src/routes/categories/[id]/: +page.svelte
src/routes/login/: +page.server.ts  +page.svelte
